tests/neg-custom-args/captures/real-try.check
-- [E190] Potential Issue Warning: tests/neg-custom-args/captures/real-try.scala:38:2 ----------------------------------
38 |  b
   |  ^
   |  Discarded non-Unit value of type Cell[() -> Unit]. Add `: Unit` to discard silently.
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/real-try.scala:14:2 -----------------------------------------------------------
14 |  try  // error
   |  ^
   |  The result of `try` cannot have type () => Unit since
   |  that type captures the root capability `cap`.
   |  This is often caused by a locally generated exception capability leaking as part of its result.
   |
   |  where:    => refers to a fresh root capability classified as Control in the type of given instance canThrow$1
   |
15 |    () => foo(1)
16 |...
18 |    case _: Ex2 => ???
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/real-try.scala:21:4 --------------------------------------
21 |    () => foo(1) // error
   |    ^^^^^^^^^^^^
   |    Capability canThrow$2 defined in an enclosing try expression outlives its scope:
   |    it leaks into outer capture set 's1 of value x.
   |    The leakage occurred when trying to match the following types:
   |
   |    Found:    () ->{canThrow$2} Unit
   |    Required: () ->'s1 Unit
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/real-try.scala:27:4 --------------------------------------
27 |    () => Cell(foo(1)) // error
   |    ^^^^^^^^^^^^^^^^^^
   |    Capability canThrow$3 defined in an enclosing try expression outlives its scope:
   |    it leaks into outer capture set 's2 of value y.
   |    The leakage occurred when trying to match the following types:
   |
   |    Found:    () ->{canThrow$3} Cell[Unit]^'s3
   |    Required: () ->'s2 Cell[Unit]^'s4
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/real-try.scala:33:8 --------------------------------------
33 |    Cell(() => foo(1)) // error
   |    ^^^^^^^^^^^^^^^^^^
   |    Capability canThrow$4 defined in an enclosing try expression outlives its scope:
   |    it leaks into outer capture set 's5 of value b.
   |    The leakage occurred when trying to match the following types:
   |
   |    Found:    Cell[() ->{canThrow$4} Unit]^'s6
   |    Required: Cell[() ->'s5 Unit]^'s7
   |
   | longer explanation available when compiling with `-explain`
